AI_scoring method implemented
